added footer links

--- a/index.html
+++ b/index.html
@@ -7,6 +7,15 @@
   </head>
   <body>
     <h1>Hello app</h1>
-    <footer>Built by Georgina A</footer>
+    <footer>
+      Built by
+      <a href="https://github.com/Gachieng" target="_blank">Georgina A</a> and
+      is on
+      <a href="https://github.com/Gachieng/Weather-forecast-app" target="_blank"
+        >Github</a
+      >
+      hosted on
+      <a href="https://weather-app-424.netlify.app" target="_blank">Netlify</a>
+    </footer>
   </body>
 </html>
