--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <footer>
       Built by
       <a href="https://github.com/Gachieng" target="_blank">Georgina A</a> and
-      is on
+      is open-sourced on
       <a href="https://github.com/Gachieng/Weather-forecast-app" target="_blank"
         >Github</a
       >
