added HTML weather details from design

--- a/index.html
+++ b/index.html
@@ -6,7 +6,42 @@
     <title>Weather Forecast App</title>
   </head>
   <body>
-    <h1>Hello app</h1>
+    <header>
+      <form>
+        <input type="search" placeholder="Enter a city.." required />
+        <input type="submit" value="Search" />
+      </form>
+    </header>
+    <main>
+      <p>New York</p>
+      <h1>15°C</h1>
+      <p>
+        Mostly cloudy
+        <br />
+        H <strong>20°C</strong> L <strong>12°C</strong>
+      </p>
+      <div>
+        <ul>
+          <li>1000 ☁️ 12°C</li>
+          <li>1200 ☁️ 16°C</li>
+          <li>1400 ⛅️ 20°C</li>
+          <li>1600 🌤️ 24°C</li>
+          <li>1800 ⛅️ 24°C</li>
+          <li>2000 ☁️ 12°C</li>
+        </ul>
+      </div>
+      <div>
+        <p>This week</p>
+        <ul>
+          <li>Sun Mostly cloudy ☁️ H 20°C L 12°C</li>
+          <li>Mon Mostluy sunny ☀️ H 25°C L 12°C</li>
+          <li>Tue Cloudy ☁️ H 18°C L 12°C</li>
+          <li>Wed Rainy 🌧️ H 14°C L 12°C</li>
+          <li>Thu Mostly cloudy ☁️ H 20°C L 12°C</li>
+          <li>Fri Mostly cloudy ☁️ H 20°C L 12°C</li>
+        </ul>
+      </div>
+    </main>
     <footer>
       Built by
       <a href="https://github.com/Gachieng" target="_blank">Georgina A</a> and
