--- a/index.html
+++ b/index.html
@@ -29,15 +29,19 @@
       </header>
       <main>
         <div class="weather-today-details">
-          <p class="weather-city" id="weather-app-city">New York</p>
-
-          <h1 class="weather-temperature">15°</h1>
-
-          <p class="weather-details">
-            Mostly cloudy
-            <br />
-            H <strong>20°C</strong> L <strong>12°C</strong>
-          </p>
+          <h1 class="weather-city" id="city"></h1>
+          <div class="main-weather">
+            <div class="main-weather-icon">⛅️</div>
+            <div class="weather-temperature" id="temp">15</div>
+            <div class="temp-unit">°</div>
+          </div>
+          <div>
+            <p class="weather-details">
+              <span>Monday 15:01,</span> Mostly cloudy
+              <br />
+              Humidity <strong>20°C</strong> Wind <strong>12°C</strong>
+            </p>
+          </div>
         </div>
         <div class="todays-forecast">
           <ul class="forecast-details">
