--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
           </div>
           <div>
             <p class="weather-details">
-              <span>Monday 15:01,</span> Mostly cloudy
+              <span id="time">Monday 15:01,</span> <span id="weather-description"></span>
               <br />
-              Humidity <strong>20°C</strong> Wind <strong>12°C</strong>
+              Humidity <strong id="humidity">20°C</strong> Wind <strong id="wind-speed"></strong>
             </p>
           </div>
         </div>
