--- a/index.html
+++ b/index.html
@@ -31,19 +31,21 @@
         <div class="weather-today-details">
           <h1 class="weather-city" id="city"></h1>
           <div class="main-weather">
-            <div class="main-weather-icon">⛅️</div>
-            <div class="weather-temperature" id="temp">15</div>
+            <div id="icon"></div>
+            <div class="weather-temperature" id="temp"></div>
             <div class="temp-unit">°</div>
           </div>
           <div>
             <p class="weather-details">
-              <span id="time">Monday 15:01,</span> <span id="weather-description"></span>
+              <span id="time">Monday 15:01,</span>
+              <span id="weather-description"></span>
               <br />
-              Humidity <strong id="humidity">20°C</strong> Wind <strong id="wind-speed"></strong>
+              Humidity <strong id="humidity"></strong> Wind
+              <strong id="wind-speed"></strong>
             </p>
           </div>
         </div>
-        <div class="todays-forecast">
+       <!-- <div class="todays-forecast">
           <ul class="forecast-details">
             <li>
               <div class="day-of-week">Mon</div>
@@ -76,7 +78,7 @@
               <div class="hour-temp">12°C</div>
             </li>
           </ul>
-        </div>
+        </div> -->
         <!-- <div class="this-weeks-forecast">
           <p>This week</p>
           <ul class="weeks-forecast-details">
