--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
           <div class="main-weather">
             <div id="icon"></div>
             <div class="weather-temperature" id="temp"></div>
-            <div class="temp-unit">°</div>
+            <div class="temp-unit">°c</div>
           </div>
           <div>
             <p class="weather-details">
